добавил возврат роли при входе
