# app/Http/Controllers/Api/V1/AuthController.php
@@ -2,31 +2,36 @@
 
 namespace App\Http\Controllers\Api\V1;
 
+use App\Enums\User\UserRole;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Auth\LoginRequest;
+use App\Http\Services\AuthService;
 use App\Models\User;
 use Illuminate\Auth\Access\AuthorizationException;
 use Illuminate\Support\Facades\Hash;
 
 class AuthController extends Controller
 {
+    /**
+     * @OA\Post(path="/api/v1/auth/login",
+     *      tags={"Auth"},
+     *      summary="Вход",
+     *      @OA\RequestBody(
+     *        required=true,
+     *        @OA\JsonContent(ref="#/components/schemas/LoginRequest"),
+     *      ),
+     *      @OA\Response(response = 200, description="Ответ",
+     *         @OA\MediaType(mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(property="token", type="string", description="Access токен"),
+     *                 @OA\Property(property="role", type="string", description="Роль пользователя"),
+     *             ),
+     *         ),
+     *     ),
+     * )
+     */
     public function login(LoginRequest $request)
     {
-        $data = $request->validated();
-
-        $user = User::where('login', $data['login'])->first();
-        if (!$user || !$user->isActive()) {
-            throw new AuthorizationException('Пользователь не существует');
-        }
-
-        $isPasswordValid = Hash::check($request['password'], $user->password);
-        if (!$isPasswordValid) {
-            throw new AuthorizationException('Неправильный пароль');
-        }
-
-        $user->tokens()->delete();
-        $token = $user->createToken('access_token')->plainTextToken;
-
-        return ['message' => $token];
+        return (new AuthService)->login($request);
     }
 }
